CoqOfSolidity/test/libsolidity/syntaxTests/errors/struct_named_error.v
(* Generated by coq-of-solidity *)
Require CoqOfSolidity.CoqOfSolidity.

(* Struct error *)
(* Contract *)
Module C.
  Definition x : Value.t :=
    undefined.
End C.
